ServiceSLA/force-app/main/default/objects/Case/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <label>Is Escalated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set by the escalation batch when a resolution target is breached.</description>
</CustomField>