ServiceSLA/force-app/main/default/objects/Case/fields/Resolution_Target__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Target__c</fullName>
    <label>Resolution Target</label>
    <type>DateTime</type>
    <description>Deadline for resolution, computed from the SLA policy on creation.</description>
</CustomField>