ServiceSLA/force-app/main/default/objects/Case/fields/Response_Target__c.field-meta.xml
<CustomField>
    <fullName>Response_Target__c</fullName>
    <label>Response Target</label>
    <type>DateTime</type>
    <description>Deadline for first response, computed from the SLA policy on creation.</description>
</CustomField>