ServiceSLA/force-app/main/default/objects/Case/fields/Service_Tier__c.field-meta.xml
<CustomField>
    <fullName>Service_Tier__c</fullName>
    <label>Service Tier</label>
    <type>Picklist</type>
    <description>Customer service tier. Drives which SLA policy applies.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>