ServiceSLA/force-app/main/default/objects/Case/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <description>Maintained by the SLA service and the escalation batch.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Response Breached</fullName>
            </value>
            <value>
                <fullName>Resolution Breached</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>